<resources>
    <string name="app_name">e-Cashier</string>
    <string name="todo">TODO</string>
    <string name="list_shop_guide">- List belanja anda akan muncul di sini -</string>
    <string name="input_kode_barang">Masukkan kode produk</string>
    <string name="quantity">Quantity</string>
    <string name="warning_to_payment">Lanjut Pembayaran?</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="nominal_awal">Rp0,00</string>
    <string name="pay">Bayar</string>
    <string name="cancel">Cancel</string>
    <string name="login">LOGIN</string>
    <string name="hint_password">Password</string>
    <string name="password">Password:</string>
    <string name="hint_username">Username</string>
    <string name="username">Username:</string>
    <string name="laporan">LAPORAN</string>
    <string name="tambah_produk">Tambahkan produk</string>
    <string name="hapus">Hapus</string>
    <string name="change">Kembalian :</string>
    <string name="total">Total :</string>
    <string name="print_complete">Print Complete</string>
    <string name="print_failed">Print Failed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_home_navigation">e-Cashier</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="input">Input</string>
    <string name="check">Check</string>
    <string name="harian">Harian</string>
    <string name="bulanan">Bulanan</string>
    <string name="tahunan">Tahunan</string>
    <string name="business_text">Nama Bisnis</string>
    <string name="owner_text">Nama Pemilik</string>
    <string name="register">Daftar</string>
    <string name="search">Cari</string>
    <string name="register_title">Daftar Bisnis</string>

</resources>
